# ReactAgent

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  MIGRATION_GUIDE.md  README.md  mcp.json  requirements.txt
.claude/: launch.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
01_ReActAgentAmapMCPServer/: README.md  amapMCPServer.py
02_ReActAgentHITL/: 01_reviewCustomToolCalls.py  02_reviewMCPToolCalls.py  03_reviewMixToolCalls.py  README.md
03_ReActAgentMemory/: 01_shortTermTest.py  02_longTermTest.py  README.md
04_ReActAgentHITLApi/: 01_backendServer.py  02_frontendServer.py  README.md
05_ReActAgentHILApiMultiSession/: 01_backendServer.py  02_frontendServer.py  README.md
06_ReActAgentHILApiMultiSessionTask/: README.md  redisTest.py
07_DeepAgentHILApiMultiSessionTask/: 01_backendServer.py  02_frontendServer.py
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  deps.py  memory.py  sessions.py  system.py
backend/app/core/: agent.py  exceptions.py  history.py  hitl.py  prompts.py  streaming.py  tools.py
backend/app/infra/: database.py  llm.py  redis.py  task_bus.py
backend/app/models/: chat.py
backend/app/services/: memory.py  session.py  task.py
backend/tests/: conftest.py  test_api_sessions.py  test_history.py  test_main.py  test_resilience.py
backend/tests/fixtures/: checkpoint_factory.py
backend/tests/test_api/: test_chat.py
backend/tests/test_core/: test_hitl.py  test_streaming.py
design_handoff_reactagent_ui_refinement/: README.md  ReActAgent UI Optimized.html
(+165 files in other folders)
